<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StarlightTLSE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_button">MENU</string>
    <string name="not_implemented">Not yet implemented, sorry :-(</string>
    <string name="planet_scale">Planet scale</string>
    <string name="star_scale">Stars scale</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="planet_name">Name</string>
    <string name="mass">Mass</string>
    <string name="size">Size</string>
    <string name="temperature">T°</string>
    <string name="period">Period</string>
    <string name="semi_axis">Semi Axis</string>

</resources>