<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#000000"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/btn_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/planet_name"
            android:textColor="#fff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".3"
            android:text="@string/mass" 
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_mass"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".3"
            android:text="@string/size" 
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_size"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".3"
            android:text="@string/temperature" 
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".3"
            android:text="@string/period" 
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_period"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".3"
            android:text="@string/semi_axis" 
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_semi_axis"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_weight=".7" />
    </LinearLayout>


</LinearLayout>